# yup

./: .gitignore  .gitmodules  LICENSE  README.md  install_stdlib.sh
.github/workflows/: ci.yml  setup_antlr4.sh  setup_llvm.sh  yupc.sh
examples/: .gitignore  factorial.yup  fibonacci.yup  func.yup  loop.yup  variables.yup
examples/Basics/: Factorial.yup  Fibonacci.yup
old-cpp-yupc/: .gitignore  gen.sh
old-cpp-yupc/include/: Logger.h  utils.h
old-cpp-yupc/include/Compiler/: AddressOf.h  Array.h  BinaryOperation.h  CodeBlock.h  Compiler.h  PointerDereference.h  Visitor.h
old-cpp-yupc/include/Lexer/: LexerErrorListener.h
old-cpp-yupc/src/: Logger.cpp  YupParser.g4
old-cpp-yupc/src/Compiler/: AddressOf.cpp  Array.cpp  CodeBlock.cpp  Compiler.cpp  Configuration.cpp  FileSystem.cpp  Logic.cpp  Operator.cpp  PointerDereference.cpp  Type.cpp
old-cpp-yupc/src/Lexer/: LexerErrorListener.cpp
samples/c_integration/: functions.yup  main.c  readme.md
support/yup-vscode-language-support/: CHANGELOG.md  README.md  package-lock.json  package.json
support/yup-vscode-language-support/src/: extension.ts
support/yup-vscode-syntax-support/: CHANGELOG.md  README.md  package.json
support/yup-vscode-syntax-support/syntaxes/: yup.tmLanguage.json
tests/: functions.yup  modules_exports.yup  modules_imports.yup  pointers.yup  tests.py  variables.yup
tutorial/: functions.yup  hello_world.yup  style_guide.yup  types.yup  variables.yup
yup_stdlib/: Ascii.yup  Bool.yup  Debug.yup  Errors.yup  IO.yup  LibC.yup  Memory.yup  Null.yup  Result.yup  STDLib.yup  String.yup  Vector.yup  Vector2.yup  bool.yup  build.sh  install_stdlib.sh  io.c  io.yup  mem.yup  memory.c  std.yup  string.yup  yup_stdlib.yup
yup_stdlib/Core/: SharedPointer.yup
yup_stdlib/IO/: FileSys.yup  IO.yup
yup_stdlib/Memory/: Allocator.yup  Memory.yup
yup_stdlib/io/: io.c  io.yup  iolib.ll  iolib_wrap.yup
yup_stdlib/memory/: memlib.ll  memlib_wrap.yup  memory.yup
yupc/: .gitignore  CMakeLists.txt  YupLexer.g4  YupParser.g4  build.py  build.sh  conanfile.txt  gen.sh  generate.py  generate.sh  go.mod  go.sum  main.go  run.sh
yupc/cmd/: compile.go  root.go
yupc/compiler/: .constant.go.kak.oPmJkZ  .struct.go.kak.Hs1L1I  .struct.go.kak.VWUu52  array.go  attr.go  binop.go  block.go  common.go  compiler.go  compiler_function.go  const.go  constant.go  explicit.go  filesys.go  flow.go  fs.go  func.go  function.go  if.go  import.go  logging.go  logic.go  loop.go  obj.go  output.go  pointers.go  preproc.go  root.go  type.go  unary.go  unit.go  utils.go  var.go  variable.go
yupc/include/: Logger.h  YupLexer.h  YupParser.h  compiler_options.h  parser_error_listener.h  shell.h  util.h  utils.h  visitor.h
yupc/include/Compiler/: AddressOf.h  Array.h  BinaryOperation.h  CompilationUnit.h  Compiler.h  Configuration.h  Constant.h  FileSystem.h  Function.h  Import.h  Logic.h  Operator.h  PointerDereference.h  Type.h  Variable.h  Visitor.h
yupc/include/Lexer/: YupLexer.h
yupc/include/compiler/: CompilationUnit.h  Compiler.h  Constant.h  FileSystem.h  Function.h  Import.h  PointerDereference.h  Type.h  Variable.h  Visitor.h  addr_of.h  array.h  auto_deleter.h  code_block.h  compilation_unit.h  compiler.h  config.h  constant.h  file_sys.h  function.h  gen_runtime_lib.h  import.h  math.h  module.h  operators.h  ptr_dereference.h  runtime_lib.h  type.h  variable.h  visitor.h
yupc/include/lexer/: lexer_error_listener.h
yupc/include/messaging/: errors.h  information.h
yupc/include/msg/: errors.h  info.h
yupc/include/parser/: ParserErrorListener.h  parser_error_listener.h
yupc/include/shell/: cmds.h  file_sys.h  shell.h
yupc/src/: Logger.cpp  YupLexer.g4  YupParser.g4  main.cc  main.cpp  parser_error_listener.cc  shell.cpp  util.cc  util.cpp  utils.cpp
yupc/src/Compiler/: AddressOf.cpp  Array.cpp  BinaryOperation.cpp  CodeBlock.cpp  CompilationUnit.cpp  Compiler.cpp  Configuration.cpp  Constant.cpp  FileSystem.cpp  Function.cpp  IfStatement.cpp  Import.cpp  Logic.cpp  Operator.cpp  PointerDereference.cpp  Type.cpp  Variable.cpp  Visitor.cpp
yupc/src/Parser/: ParserErrorListener.cpp
yupc/src/ast_visitor/: assignment.cc  compiler_flag.cc  constant.cc  data.cc  function.cc  ir_data.cc  type.cc  visitor.cc  visitor.h
yupc/src/compiler/: AddressOf.cpp  Array.cpp  BinaryOperation.cpp  CodeBlock.cpp  CompilationUnit.cpp  Compiler.cpp  Configuration.cpp  Constant.cpp  FileSystem.cpp  Function.cpp  Import.cpp  Operator.cpp  PointerDereference.cpp  Type.cpp  Variable.cpp  Visitor.cpp  addr_of.cc  addr_of.cpp  array.cc  array.cpp  auto_deleter.cc  code_block.cc  code_block.cpp  compilation_unit.cc  compilation_unit.cpp  compiler.cc  compiler.cpp  config.cpp  constant.cc  constant.cpp  data.cc  file_sys.cpp  function.cc  function.cpp  gen_runtime_lib.cpp  import.cc  import.cpp  math.cc  math.cpp  module.cc  (+12 more)
yupc/src/lexer/: LexerErrorListener.cpp  lexer_error_listener.cpp
yupc/src/messaging/: errors.cc  erros.cc  information.cc
yupc/src/msg/: errors.cc  errors.cpp  info.cc  info.cpp
yupc/src/parser/: ParserErrorListener.cpp  parser_error_listener.cpp
yupc/src/shell/: cmds.cpp  file_sys.cpp  shell.cpp
yupcgo/: .gitignore  YupLexer.g4  YupParser.g4  build.sh  gen.sh  go.mod  go.sum  main.go  readme.md
yupcgo/ast/: array.go  block.go  compiler_function.go  constant.go  fs.go  function.go  import.go  pointers.go  root.go  type.go  variable.go
yupcgo/cmd/: compile.go  root.go
yupcgo/compiler/: array.go  block.go  compiler_function.go  constant.go  fs.go  function.go  import.go  pointers.go  root.go  type.go  unit.go  variable.go
yupcgo/fs/: root.go
yupstdlib/: memory.yup
